 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4717: Update Apache HTTPD LogParser to latest version (nielsbasjes via daijy)

PIG-4468: Pig's jackson version conflicts with that of hadoop 2.6.0 or newer (zjffdu via daijy)

PIG-4708: Upgrade joda-time to 2.8 (rohini)

PIG-4697: Pig needs to serialize only part of the udfcontext for each vertex (rohini)

PIG-4702: Load once for sampling and partitioning in order by for certain LoadFuncs (rohini)

PIG-4699: Print Job stats information in Tez like mapreduce (rohini)

PIG-4554: Compress pig.script before encoding (sandyridgeracer via rohini)

PIG-4670: Embedded Python scripts still parse line by line (rohini)

PIG-4663: HBaseStorage should allow the MaxResultsPerColumnFamily limit to avoid memory or scan timeout issues (pmazak via rohini)

PIG-4673: Built In UDF - REPLACE_MULTI : For a given string, search and replace all occurrences
 of search keys with replacement values (murali.k.h.rao@gmail.com via daijy)

PIG-4674: TOMAP should infer schema (daijy)

PIG-4676: Upgrade Hive to 1.2.1 (daijy)

PIG-4574: Eliminate identity vertex for order by and skewed join right after LOAD (rohini)

PIG-4365: TOP udf should implement Accumulator interface (eyal via rohini)

PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4712: [Pig on Tez] NPE in Bloom UDF after Union (rohini)

PIG-4707: [Pig on Tez] Streaming job hangs with pig.exec.mapPartAgg=true (rohini)
