@@ -568,6 +568,22 @@ hcat.bin=/usr/local/hcat/bin/hcat
 #
 # opt.fetch=true
 
+#########################################################################
+#
+# Error Handling Properties
+#
+# By default, Pig job fails immediately on encountering an errors on writing Tuples for Store.
+# If you want Pig to allow certain errors before failing you can set this property.
+# If the propery is set to true and the StoreFunc implements ErrorHandling if will allow configurable errors 
+# based on the OutputErrorHandler implementation  
+# pig.allow.store.errors = false
+#
+# Controls the minimum number of errors for store
+# pig.errors.min.records = 0
+#
+# Set the threshold for percentage of errors
+# pig.error.threshold.percent = 0.0f
+
 ###########################################################################
 #
 # Streaming properties
